fix: update GitHub Actions workflow to correctly reference base and head

--- a/.github/workflows/sync-docs-and-package-info.yml
+++ b/.github/workflows/sync-docs-and-package-info.yml
@@ -35,6 +35,8 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v40
         with:
+          base: ${{ github.event.before }}
+          head: ${{ github.event.after }}
           files_yaml: |
             docs:
               - 'packages/*/docs/**/*.md'
