fix: update changed-files action parameters for better compatibility

--- a/.github/workflows/sync-docs-and-package-info.yml
+++ b/.github/workflows/sync-docs-and-package-info.yml
@@ -35,8 +35,8 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v40
         with:
-          base: ${{ github.event.before || 'HEAD~1' }}
-          head: ${{ github.event.after || 'HEAD' }}
+          base_sha: ${{ github.event.before || 'HEAD~1' }}
+          sha: ${{ github.event.after || 'HEAD' }}
           files_yaml: |
             docs:
               - 'packages/*/docs/**/*.md'
