--- a/.github/workflows/sync-docs-and-package-info.yml
+++ b/.github/workflows/sync-docs-and-package-info.yml
@@ -4,15 +4,7 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'packages/*/docs/**/*.md'
-      - '**/package-info.json'
-  pull_request:
-    branches:
-      - main
-    types:
-      - opened
-      - synchronize
+      - vwjt_readme_map_fixes
     paths:
       - 'packages/*/docs/**/*.md'
       - '**/package-info.json'
