--- a/.github/workflows/sync-docs-and-package-info.yml
+++ b/.github/workflows/sync-docs-and-package-info.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - vwjt_readme_map_fixes
     paths:
       - 'packages/*/docs/**/*.md'
       - '**/package-info.json'
