--- a/packages/notion-oauth/package.json
+++ b/packages/notion-oauth/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microfox/notion-oauth",
   "version": "1.0.0",
-  "description": "A TypeScript OAuth package for Notion.",
+  "description": "A TypeScript OAuth package for Notion connection.",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
