--- a/packages/klingai/package.json
+++ b/packages/klingai/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microfox/klingai",
   "version": "1.0.0",
-  "description": "TypeScript SDK for integrating with the Klingai API.",
+  "description": "A TypeScript SDK for integrating with the Klingai API.",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -24,10 +24,12 @@
     }
   },
   "dependencies": {
-    "zod": "^3.24.2"
+    "jsonwebtoken": "9.0.2",
+    "zod": "3.25.67"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
+    "@types/jsonwebtoken": "9.0.10",
     "@types/node": "^18",
     "tsup": "^8",
     "typescript": "5.6.3"
