--- a/.github/workflows/trigger-release.yml
+++ b/.github/workflows/trigger-release.yml
@@ -30,7 +30,40 @@ jobs:
           # Use the GITHUB_TOKEN for authentication, permissions are set above
           token: ${{ steps.generate_token.outputs.token }}
 
-      - name: Create dummy changeset file
+      - name: Parse release issue title
+        id: parse_title
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const title = context.payload.issue.title;
+            const releaseRegex = /^release\s+(@[a-zA-Z0-9_-]+\/[a-zA-Z0-9._-]+)(?:\s+(major|minor|patch))?/;
+            const match = title.match(releaseRegex);
+
+            let packageName = '';
+            let bumpType = 'patch';
+
+            if (match) {
+              packageName = match[1];
+              if (match[2]) {
+                bumpType = match[2];
+              }
+            }
+            
+            core.setOutput('package_name', packageName);
+            core.setOutput('bump_type', bumpType);
+          result-encoding: string
+
+      - name: Create package changeset file
+        if: steps.parse_title.outputs.package_name != ''
+        run: |
+          mkdir -p .changeset
+          PACKAGE_NAME="${{ steps.parse_title.outputs.package_name }}"
+          BUMP_TYPE="${{ steps.parse_title.outputs.bump_type }}"
+          printf -- "---\n\"%s\": %s\n---\n\nTriggered by issue #${{ github.event.issue.number }}: ${{ github.event.issue.title }}\n" "$PACKAGE_NAME" "$BUMP_TYPE" > .changeset/trigger-${{ github.event.issue.number }}.md
+          echo "Created package changeset for $PACKAGE_NAME with bump type $BUMP_TYPE"
+
+      - name: Create generic changeset file
+        if: steps.parse_title.outputs.package_name == ''
         run: |
           mkdir -p .changeset
           # Use printf to correctly handle newline characters
