--- a/packages/webhook-kit/package.json
+++ b/packages/webhook-kit/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "@microfox/webhook-octokit",
-  "version": "1.1.0",
-  "description": "A TypeScript package for receiving webhooks from Octokit.",
+  "name": "@microfox/webhook-kit",
+  "version": "1.0.0",
+  "private": true,
+  "description": "A central webhook kit for building webhook integrations in Microfox",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
     "dist/**/*",
-    "CHANGELOG.md"
+    "README.md"
   ],
   "scripts": {
     "build": "tsup",
@@ -24,23 +25,18 @@
     }
   },
   "dependencies": {
+    "@microfox/google-oauth": "*",
+    "@microfox/slack-oauth": "*",
     "@microfox/webhook-core": "*",
-    "@octokit/webhooks": "^13.8.2",
-    "@types/aws-lambda": "^8.10.149",
-    "aws-lambda": "^1.0.7",
+    "@microfox/webhook-octokit": "*",
+    "@microfox/webhook-slack": "*",
     "zod": "^3.24.2"
-  },
-  "peerDependencies": {
-    "next": ">=13.0.0"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
     "@types/node": "^18",
     "tsup": "^8",
     "typescript": "5.6.3"
-  },
-  "publishConfig": {
-    "access": "public"
   },
   "engines": {
     "node": ">=20.0.0"
@@ -54,11 +50,12 @@
     "url": "https://github.com/microfox-ai/microfox/issues"
   },
   "keywords": [
-    "slack",
+    "microfox",
     "webhook",
+    "webhook-kit",
+    "sdk",
     "typescript",
-    "notification",
-    "microfox"
+    "internal"
   ],
   "author": "TheMoonDevs",
   "license": "MIT"
