--- a/packages/oauth-kit/package.json
+++ b/packages/oauth-kit/package.json
@@ -38,6 +38,9 @@
   "engines": {
     "node": ">=20.0.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "homepage": "https://github.com/microfox-ai/microfox",
   "repository": {
     "type": "git",
