--- a/packages/webhook-octokit/package.json
+++ b/packages/webhook-octokit/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microfox/webhook-octokit",
   "version": "1.1.1",
-  "description": "A TypeScript package for receiving webhooks from Octokit.",
+  "description": "A TypeScript package for receiving webhooks from Octokit properly parsed.",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
