--- a/packages/oauth-kit/package.json
+++ b/packages/oauth-kit/package.json
@@ -24,8 +24,8 @@
     }
   },
   "dependencies": {
-    "@microfox/slack-oauth": "*",
-    "@microfox/google-oauth": "*",
+    "@microfox/slack-oauth": "^1.1.2",
+    "@microfox/google-oauth": "^1.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
