--- a/packages/slack/package.json
+++ b/packages/slack/package.json
@@ -5,18 +5,22 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts",
-    "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
-    "lint": "eslint .",
-    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
-  },
-  "dependencies": {
-    "@slack/web-api": "^6.7.2"
+    "build": "tsup",
+    "build:watch": "tsup --watch",
+    "clean": "rm -rf dist",
+    "lint": "eslint \"./**/*.ts*\"",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "prettier-check": "prettier --check \"./**/*.ts*\""
   },
   "devDependencies": {
-    "tsup": "^5.10.1",
-    "typescript": "^4.5.2",
-    "@microfox/eslint-config": "workspace:*",
-    "@microfox/tsconfig": "workspace:*"
+    "@microfox/tsconfig": "*",
+    "@types/node": "^18",
+    "tsup": "^8",
+    "typescript": "5.6.3"
+  },
+  "dependencies": {
+    "@slack/web-api": "^7.9.3"
   }
-} 
+}
