--- a/packages/webhook-kit/package.json
+++ b/packages/webhook-kit/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
+    "@octokit/webhooks-types": "^7.3.1",
     "@types/node": "^18",
     "tsup": "^8",
     "typescript": "5.6.3"
