--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
     "glob": "^11.0.1",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zod-to-json-schema": "^3.24.5"
   },
   "type": "module"
 }
