--- a/packages/tool-kit/package.json
+++ b/packages/tool-kit/package.json
@@ -24,7 +24,9 @@
     }
   },
   "dependencies": {
-    "zod": "^3.24.2"
+    "@ai-sdk/ui-utils": "^1.2.11",
+    "ai": "^4.3.16",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
