feat: enhance tool-kit with updated dependencies and improved human interaction handling
- Added new dependencies including `@ai-sdk/openai`, `@ai-sdk/gateway`, and `eventsource-parser`.
- Updated existing dependencies such as `ai` to version `5.0.0-alpha.15` and `@ai-sdk/openai` to version `2.0.0-alpha.15`.
- Refactored the `Toolkit` class to streamline human-in-the-loop interactions and improve message handling.
- Enhanced example TypeScript file to demonstrate new functionality and improved user experience.
- Updated type definitions to support optional parameters for human intervention context.

--- a/packages/tool-kit/package.json
+++ b/packages/tool-kit/package.json
@@ -24,8 +24,9 @@
     }
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.0-alpha.15",
     "@ai-sdk/ui-utils": "^1.2.11",
-    "ai": "^4.3.16",
+    "ai": "^5.0.0-alpha.15",
     "zod": "^3.25.67"
   },
   "devDependencies": {
