chore: update .gitignore and remove sensitive env.json file

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ packages/*/research-report.md
 packages/*/build-report.md
 packages/*/doc-report.md
 packages/*/codegen-report.md
+
+# SLS
+env.json
+.build
+.serverless
