chore: change package access from private to public in ai-provider-vertex

--- a/packages/ai-provider-vertex/package.json
+++ b/packages/ai-provider-vertex/package.json
@@ -42,7 +42,7 @@
     "typescript": "5.6.3"
   },
   "publishConfig": {
-    "access": "."
+    "access": "public"
   },
   "engines": {
     "node": ">=20.0.0"
