feat: update @ext_ai package and remove deprecated files
- Upgraded the version of `@ai-sdk/openai` to `2.0.0-canary.20` and updated its dependencies.
- Removed deprecated files related to the `@ext_ai` package, including `@ext_package.json`, `package-builder.json`, `package-info.json`, `README.md`, and various documentation files.
- Streamlined the package structure to enhance maintainability and clarity.

--- a/packages/ai-provider-vertex/package.json
+++ b/packages/ai-provider-vertex/package.json
@@ -26,10 +26,11 @@
     }
   },
   "dependencies": {
-    "@ai-sdk/google-vertex": "^2.2.24",
+    "@ai-sdk/google-vertex": "^2.0.0-alpha.15",
+    "@ai-sdk/provider": "^2.0.0-beta",
     "@microfox/usage-tracker": "*",
     "@upstash/redis": "^1.34.9",
-    "ai": "^4.3.16",
+    "ai": "^5.0.0-beta",
     "zod": "^3.24.2"
   },
   "devDependencies": {
