--- a/packages/ai-provider-perplexity/package.json
+++ b/packages/ai-provider-perplexity/package.json
@@ -26,10 +26,11 @@
     }
   },
   "dependencies": {
-    "@ai-sdk/perplexity": "^1.1.9",
+    "@ai-sdk/perplexity": "^2.0.0-beta",
+    "@ai-sdk/provider": "^2.0.0-beta",
     "@microfox/usage-tracker": "*",
     "@upstash/redis": "^1.34.9",
-    "ai": "^4.3.16",
+    "ai": "^5.0.0-beta",
     "zod": "^3.24.2"
   },
   "devDependencies": {
