--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@microfox/ai-provider-google",
-  "version": "1.1.0",
-  "description": "A Wrapped Google AI Provider for Vercels AI SDK",
+  "name": "ai",
+  "version": "1.0.0",
+  "description": "Wrapper for AI SDK by Vercel - Only for Internal use of microfox ai packages",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -26,8 +26,6 @@
     }
   },
   "dependencies": {
-    "@ai-sdk/google": "^2.0.0-beta",
-    "@ai-sdk/provider": "^2.0.0-beta",
     "@microfox/usage-tracker": "*",
     "ai": "^5.0.0-beta",
     "zod": "^3.24.2"
@@ -56,12 +54,9 @@
     "url": "https://github.com/microfox-ai/microfox/issues"
   },
   "keywords": [
-    "google",
-    "gemini",
-    "provider",
+    "Vercel",
     "ai",
     "sdk",
-    "microfox",
     "typescript"
   ]
 }
