--- a/packages/task-kit/package.json
+++ b/packages/task-kit/package.json
@@ -28,14 +28,14 @@
     "@microfox/usage-tracker": "*",
     "@microfox/webhook-core": "*",
     "@supabase/supabase-js": "^2.50.0",
-    "ai": "^4.3.16",
+    "ai": "^5.0.0-beta",
     "zod": "^3.25.67"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
     "@types/node": "^18",
-    "tsup": "^8.0.2",
-    "typescript": "^5.4.5"
+    "tsup": "^8",
+    "typescript": "5.6.3"
   },
   "engines": {
     "node": ">=20.0.0"
