refactor: update script name in workflow from update:readme-map to update:constructors

--- a/.github/workflows/sync-docs-and-package-info.yml
+++ b/.github/workflows/sync-docs-and-package-info.yml
@@ -46,7 +46,7 @@ jobs:
           
           # Run the script - it will handle git comparison internally
           cd scripts
-          npm run update:readme-map
+          update:constructors
           
           # Check if any package-info.json files were modified
           echo "🐛 Current directory: $(pwd)"
