--- a/scripts/package.json
+++ b/scripts/package.json
@@ -23,12 +23,13 @@
     "save:package-info": "ts-node src/package-info/savePackageInfo.ts",
     "query:package-info": "ts-node src/package-info/queryPackageInfo.ts",
     "update:constructors": "ts-node src/package-info/updateConstructors.ts",
-    "sync:docs-and-package-info": "npm run update:readme-map && npm run save:package-info && npm run embed:docs",
+    "sync:docs-and-package-info": "npm run update:constructors && npm run save:package-info && npm run embed:docs",
     "embed:query": "ts-node src/embeddings/queryDocs.ts",
     "workflow:packagefox": "ts-node src/handleWorkflow.ts",
     "deploy:sls": "ts-node src/agents/slsfox/deploy/ci.ts",
     "gen:sls": "ts-node src/agents/slsfox/genSls.ts",
-    "api:query": "ts-node src/embeddings/queryApis.ts"
+    "api:query": "ts-node src/embeddings/queryApis.ts",
+    "mcp:start": "ts-node src/mcp/server.ts"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.10",
@@ -36,24 +37,30 @@
     "@microfox/crypto-sdk": "^1.1.0",
     "@microfox/serpapi": "1.0.2",
     "@microfox/tavily": "1.0.2",
+    "@modelcontextprotocol/sdk": "^1.13.2",
     "@octokit/rest": "^21.1.1",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^2.43.4",
+    "@types/express": "^4.17.21",
     "ai": "^4.2.0",
     "dedent": "^1.5.3",
     "dotenv": "^16.4.5",
     "glob": "^11.0.1",
     "jsdom": "^26.1.0",
-    "octokit": "^4.1.3",
+    "octokit": "^4.0.2",
     "puppeteer": "^24.6.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/diff": "^7.0.2",
+    "@types/jest": "^29.5.12",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^20.11.19",
+    "@types/node": "^20.12.12",
     "diff": "^7.0.0",
+    "express": "^4.19.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5"
   },
   "engines": {
     "node": ">=20.0.0"
