--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,17 +36,7 @@ jobs:
         uses: changesets/action@v1
         with:
           version: npm run ci:version
-          publish: |
-            set -e
-            PACKAGES_TO_BUILD=$(npx changeset status --json | jq -r '.releases[].name' | awk '{printf "--filter=%s ", $0}')
-            if [ -n "$PACKAGES_TO_BUILD" ]; then
-              echo "Building packages: $PACKAGES_TO_BUILD"
-              npx turbo run build $PACKAGES_TO_BUILD
-            else
-              echo "No packages to build."
-            fi
-            npx changeset publish
-          ignore: microfox-scripts
+          publish: ./scripts/release.sh ${{ github.event.before }} ${{ github.event.after }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN_ELEVATED }}
