--- a/packages/tool-kit/package.json
+++ b/packages/tool-kit/package.json
@@ -14,7 +14,9 @@
     "build:watch": "tsup --watch",
     "clean": "rm -rf dist",
     "lint": "eslint \"./**/*.ts*\"",
-    "prettier-check": "prettier --check \"./**/*.ts*\""
+    "prettier-check": "prettier --check \"./**/*.ts*\"",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "exports": {
     "./package.json": "./package.json",
@@ -34,7 +36,8 @@
     "@octokit/webhooks-types": "^7.3.1",
     "@types/node": "^18",
     "tsup": "^8",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "vitest": "^1.0.0"
   },
   "engines": {
     "node": ">=20.0.0"
