--- a/packages/puppeteer-suno/package.json
+++ b/packages/puppeteer-suno/package.json
@@ -25,18 +25,20 @@
     }
   },
   "dependencies": {
-    "zod": "^3.24.2",
     "@microfox/puppeteer-sls": "1.0.3",
-    "puppeteer-core": "24.10.2"
+    "puppeteer-core": "24.10.2",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@sparticuz/chromium": "123.0.1",
     "@microfox/tsconfig": "*",
+    "@sparticuz/chromium": "123.0.1",
     "@types/node": "^18",
     "@types/puppeteer-core": "^7.0.4",
-    "vitest": "^1.6.0",
     "tsup": "^8",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "vitest": "^1.6.0"
   },
   "publishConfig": {
     "access": "public"
