chore: update package-lock.json to include @microfox/crypto-sdk and remove auto-sls-update workflow

--- a/packages/tool-kit/package.json
+++ b/packages/tool-kit/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@ai-sdk/openai": "2.0.0-alpha.15",
     "@ai-sdk/ui-utils": "1.2.11",
+    "@microfox/crypto-sdk": "^1.2.0",
     "ai": "5.0.0-alpha.15",
     "zod": "^3.25.67"
   },
