--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-microfox": "*",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.3.3",
+    "serverless": "^3.40.0",
     "turbo": "2.3.3",
     "typescript": "5.6.3"
   },
