--- a/packages/slack-web-tiny/sls/package.json
+++ b/packages/slack-web-tiny/sls/package.json
@@ -13,12 +13,14 @@
     "remove:preview": "serverless remove --stage preview",
     "remove:prod": "serverless remove --stage prod",
     "start": "serverless offline start",
+    "dev": "npm run build && serverless offline start",
     "lint": "eslint  --ignore-path .gitignore ."
   },
   "dependencies": {
     "@microfox/crypto-sdk": "^1.0.3",
-    "dotenv": "^16.4.5",
-    "@microfox/slack-web-tiny": "^1.2.4"
+    "@microfox/slack-web-tiny": "^1.2.4",
+    "aws-lambda": "^1.0.7",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
@@ -29,6 +31,7 @@
     "eslint-plugin-import": "^2.31.0",
     "serverless": "^3.38.0",
     "serverless-api-gateway-throttling": "^2.0.3",
+    "serverless-offline": "^13.3.3",
     "serverless-plugin-typescript": "^2.1.5",
     "typescript": "^5.3.3"
   },
