chore: update deploy workflow to trigger on specific branches and paths

--- a/.github/workflows/deploy-sls.yml
+++ b/.github/workflows/deploy-sls.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+      - feat/sls_deploy_and_embedding
+    paths:
+      - '**/sls/**'
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
