chore: add sls directory to changed files detection in workflow

--- a/.github/workflows/detect-changes.yml
+++ b/.github/workflows/detect-changes.yml
@@ -55,6 +55,7 @@ jobs:
             packages/*/.turbo/**
             packages/*/.next/**
             packages/*/coverage/**
+            packages/*/sls/**
 
       - name: Debug Changed Files
         run: |
