--- a/packages/ai-agent/package.json
+++ b/packages/ai-agent/package.json
@@ -26,11 +26,11 @@
     }
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^2.0.0-beta",
-    "@ai-sdk/google": "^2.0.0-beta",
-    "@ai-sdk/provider": "^2.0.0-beta",
-    "ai": "^5.0.0-beta",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "ai": "5.0.0-beta.7",
+    "@ai-sdk/provider": "2.0.0-beta.1",
+    "@ai-sdk/google": "2.0.0-beta.6",
+    "@ai-sdk/anthropic": "2.0.0-beta.3"
   },
   "devDependencies": {
     "@types/node": "^18",
