--- a/.github/workflows/sync-docs-and-package-info.yml
+++ b/.github/workflows/sync-docs-and-package-info.yml
@@ -33,71 +33,71 @@ jobs:
           cd scripts
           npm i
 
-      # 4) Update package-info.json files for docs changes
-      - name: Update package-info.json for docs changes
-        id: update-package-info
-        env:
-          GITHUB_BEFORE: ${{ github.event.before }}
-          GITHUB_AFTER: ${{ github.event.after }}
-          GITHUB_REF_NAME: ${{ github.ref_name }}
-        run: |
-          echo "📝 Checking for docs changes..."
-          echo "Comparing: $GITHUB_BEFORE → $GITHUB_AFTER"
+      # # 4) Update package-info.json files for docs changes
+      # - name: Update package-info.json for docs changes
+      #   id: update-package-info
+      #   env:
+      #     GITHUB_BEFORE: ${{ github.event.before }}
+      #     GITHUB_AFTER: ${{ github.event.after }}
+      #     GITHUB_REF_NAME: ${{ github.ref_name }}
+      #   run: |
+      #     echo "📝 Checking for docs changes..."
+      #     echo "Comparing: $GITHUB_BEFORE → $GITHUB_AFTER"
           
-          # Run the script - it will handle git comparison internally
-          cd scripts
-          npm run update:constructors
+      #     # Run the script - it will handle git comparison internally
+      #     cd scripts
+      #     npm run update:constructors
           
-          # Check if any package-info.json files were modified
-          echo "🐛 Current directory: $(pwd)"
-          echo "🐛 Root directory contents:"
-          ls -la ..
-          echo "🐛 Checking for package-info.json changes:"
-          echo "🐛 Git status from scripts dir:"
-          git status --porcelain ../packages/*/package-info.json || echo "No files found with ../packages/ pattern"
-          echo "🐛 Git status from root dir:"
-          cd ..
-          pwd
-          git status --porcelain packages/*/package-info.json || echo "No files found with packages/ pattern"
+      #     # Check if any package-info.json files were modified
+      #     echo "🐛 Current directory: $(pwd)"
+      #     echo "🐛 Root directory contents:"
+      #     ls -la ..
+      #     echo "🐛 Checking for package-info.json changes:"
+      #     echo "🐛 Git status from scripts dir:"
+      #     git status --porcelain ../packages/*/package-info.json || echo "No files found with ../packages/ pattern"
+      #     echo "🐛 Git status from root dir:"
+      #     cd ..
+      #     pwd
+      #     git status --porcelain packages/*/package-info.json || echo "No files found with packages/ pattern"
           
-          if [ -z "$(git status --porcelain packages/*/package-info.json)" ]; then
-            echo "no_changes=true" >> $GITHUB_OUTPUT
-            echo "ℹ️ No package-info.json changes needed"
-          else
-            echo "no_changes=false" >> $GITHUB_OUTPUT
-            echo "✅ package-info.json files were updated"
-            echo "Changed files:"
-            git status --porcelain packages/*/package-info.json
-          fi
+      #     if [ -z "$(git status --porcelain packages/*/package-info.json)" ]; then
+      #       echo "no_changes=true" >> $GITHUB_OUTPUT
+      #       echo "ℹ️ No package-info.json changes needed"
+      #     else
+      #       echo "no_changes=false" >> $GITHUB_OUTPUT
+      #       echo "✅ package-info.json files were updated"
+      #       echo "Changed files:"
+      #       git status --porcelain packages/*/package-info.json
+      #     fi
 
-      # 5) Commit updated package-info.json files if there are changes
-      - name: Commit updated package-info.json files
-        if: steps.update-package-info.outputs.no_changes != 'true'
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: 'chore: update package-info.json for docs changes'
-          file_pattern: '**/package-info.json'
-          commit_user_name: 'github-actions[bot]'
-          commit_user_email: 'github-actions[bot]@users.noreply.github.com'
-          commit_author: 'github-actions[bot] <github-actions[bot]@users.noreply.github.com>'
-          skip_dirty_check: false
+      # # 5) Commit updated package-info.json files if there are changes
+      # - name: Commit updated package-info.json files
+      #   if: steps.update-package-info.outputs.no_changes != 'true'
+      #   uses: stefanzweifel/git-auto-commit-action@v4
+      #   with:
+      #     commit_message: 'chore: update package-info.json for docs changes'
+      #     file_pattern: '**/package-info.json'
+      #     commit_user_name: 'github-actions[bot]'
+      #     commit_user_email: 'github-actions[bot]@users.noreply.github.com'
+      #     commit_author: 'github-actions[bot] <github-actions[bot]@users.noreply.github.com>'
+      #     skip_dirty_check: false
 
-      # 6) Refresh git state after commit
-      - name: Refresh git state
-        if: steps.update-package-info.outputs.no_changes != 'true'
-        run: |
-          git fetch origin
-          git reset --hard origin/${{ github.ref_name }}
+      # # 6) Refresh git state after commit
+      # - name: Refresh git state
+      #   if: steps.update-package-info.outputs.no_changes != 'true'
+      #   run: |
+      #     git fetch origin
+      #     git reset --hard origin/${{ github.ref_name }}
 
-      # 7) Index package info in database
-      - name: Index updated package info
-        env:
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-        run: |
-          echo "🔍 Indexing package info in database..."
-          cd scripts
-          npm run save:package-info
+      # # 7) Index package info in database
+      # - name: Index updated package info
+      #   env:
+      #     SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      #     SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+      #   run: |
+      #     echo "🔍 Indexing package info in database..."
+      #     cd scripts
+      #     npm run save:package-info
 
       # 8) Index docs in database
       - name: Index docs
