--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -27,13 +27,15 @@
     }
   },
   "dependencies": {
-    "commander": "^13.1.0",
     "chalk": "^5.4.1",
-    "zod": "^3.25.67",
-    "readline-sync": "^1.4.10"
+    "commander": "^13.1.0",
+    "inquirer": "^12.7.0",
+    "readline-sync": "^1.4.10",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@microfox/tsconfig": "*",
+    "@types/inquirer": "^9.0.8",
     "@types/node": "^24.0.8",
     "@types/readline-sync": "^1.4.8",
     "tsup": "^8",
