chore: update package names to include scope for @microfox

--- a/packages/rag-upstash/package.json
+++ b/packages/rag-upstash/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rag-upstash",
+  "name": "@microfox/rag-upstash",
   "version": "1.0.0",
   "description": "A TypeScript SDK for Rag Upstash.",
   "main": "./dist/index.js",
