--- a/packages/brave/sls/package.json
+++ b/packages/brave/sls/package.json
@@ -16,9 +16,10 @@
     "lint": "eslint  --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@microfox/brave": "^1.0.7",
     "@microfox/crypto-sdk": "^1.0.3",
-    "dotenv": "^16.4.5",
-    "@microfox/brave": "^1.0.7"
+    "@microfox/tool-core": "^1.0.1",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
