--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -27,9 +27,12 @@
     }
   },
   "dependencies": {
+    "@types/micromatch": "^4.0.9",
+    "axios": "^1.10.0",
     "chalk": "^5.4.1",
     "commander": "^13.1.0",
     "inquirer": "^12.7.0",
+    "micromatch": "^4.0.8",
     "readline-sync": "^1.4.10",
     "zod": "^3.25.67"
   },
