--- a/packages/puppeteer-sls/package.json
+++ b/packages/puppeteer-sls/package.json
@@ -15,7 +15,7 @@
     "clean": "rm -rf dist",
     "lint": "eslint \"./**/*.ts*\"",
     "prettier-check": "prettier --check \"./**/*.ts*\"",
-    "test": "jest",
+    "test": "vitest",
     "test:watch": "jest --watch"
   },
   "exports": {
@@ -25,7 +25,12 @@
       "require": "./dist/index.js"
     }
   },
-  "dependencies": {},
+  "dependencies": {
+    "@microfox/s3-space": "*",
+    "@mozilla/readability": "^0.5.0",
+    "puppeteer-core": ">=22.0.0",
+    "turndown": "^7.2.0"
+  },
   "peerDependencies": {
     "@sparticuz/chromium": ">=123.0.1",
     "puppeteer-core": ">=22.0.0"
@@ -34,12 +39,15 @@
     "@microfox/tsconfig": "*",
     "@sparticuz/chromium": "^137.0.1",
     "@types/jest": "^29.5.12",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^18",
+    "@types/turndown": "^5.0.4",
     "jest": "^29.7.0",
     "puppeteer-core": "^22.15.0",
     "ts-jest": "^29.1.2",
     "tsup": "^8",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "vitest": "^1.6.0"
   },
   "publishConfig": {
     "access": "public"
