--- a/packages/ai-code/package.json
+++ b/packages/ai-code/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@microfox/ai-agent",
+  "name": "@microfox/ai-code",
   "version": "1.0.0",
   "description": "A TypeScript SDK for Ai Agent.",
   "main": "./dist/index.js",
@@ -49,7 +49,7 @@
     "node": ">=18.0.0"
   },
   "keywords": [
-    "ai-agent",
+    "ai-code",
     "typescript",
     "api",
     "sdk"
