--- a/packages/ai-code/package.json
+++ b/packages/ai-code/package.json
@@ -27,10 +27,10 @@
   },
   "dependencies": {
     "zod": "^3.24.3",
-    "ai": "5.0.0-beta.7",
-    "@ai-sdk/provider": "2.0.0-beta.1",
-    "@ai-sdk/google": "2.0.0-beta.6",
-    "@ai-sdk/anthropic": "2.0.0-beta.3"
+    "ai": "^5.0.0-beta",
+    "@ai-sdk/provider": "^2.0.0-beta",
+    "@ai-sdk/google": "^2.0.0-beta",
+    "@ai-sdk/anthropic": "^2.0.0-beta"
   },
   "devDependencies": {
     "@types/node": "^18",
