--- a/packages/ai-router/package.json
+++ b/packages/ai-router/package.json
@@ -26,7 +26,7 @@
     }
   },
   "dependencies": {
-    "ai": "^5.0.0-alpha.15",
+    "ai": "5.0.0-alpha.15",
     "zod": "^3.24.3"
   },
   "devDependencies": {
