--- a/packages/ai-code/package.json
+++ b/packages/ai-code/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "zod": "^3.24.3",
-    "ai": "^5.0.0-beta",
+    "ai": "5.0.0-alpha.15",
     "@ai-sdk/provider": "^2.0.0-beta",
     "@ai-sdk/google": "^2.0.0-beta",
     "@ai-sdk/anthropic": "^2.0.0-beta"
