fix: update ai and ai-sdk dependencies to alpha.15 versions

--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@microfox/usage-tracker": "*",
-    "ai": "^5.0.0-beta",
+    "ai": "5.0.0-alpha.15",
     "zod": "^3.24.2"
   },
   "devDependencies": {
