--- a/packages/ai-provider-perplexity/package.json
+++ b/packages/ai-provider-perplexity/package.json
@@ -26,11 +26,11 @@
     }
   },
   "dependencies": {
-    "@ai-sdk/perplexity": "^2.0.0-beta",
-    "@ai-sdk/provider": "^2.0.0-beta",
+    "@ai-sdk/perplexity": "2.0.0-alpha.15",
+    "@ai-sdk/provider": "2.0.0-alpha.15",
     "@microfox/usage-tracker": "*",
     "@upstash/redis": "^1.34.9",
-    "ai": "^5.0.0-beta",
+    "ai": "5.0.0-alpha.15",
     "zod": "^3.24.2"
   },
   "devDependencies": {
