--- a/packages/brave/sls/serverless.yml
+++ b/packages/brave/sls/serverless.yml
@@ -1,5 +1,9 @@
 service: public-brave-api
 
+package:
+  include:
+    - 'openapi.json'
+
 plugins:
   - serverless-plugin-typescript
   - serverless-api-gateway-throttling
@@ -12,9 +16,15 @@ provider:
   environment: ${file(env.json)}
 
 custom:
+  stage: ${opt:stage, env:ENVIRONMENT, 'dev'}
   apiGatewayThrottling:
     maxRequestsPerSecond: 50
     maxConcurrentRequests: 20
+  serverless-offline:
+    printOutput: true
+    httpPort: 4000
+    lambdaPort: 4002
+    environment: ${file(env.json)}
 
 functions:
   unifiedHandler:
