--- a/packages/puppeteer-sls/sls/tsconfig.json
+++ b/packages/puppeteer-sls/sls/tsconfig.json
@@ -17,8 +17,16 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "baseUrl": "./src",
+    "resolveJsonModule": true,
     "paths": {
       "@/*": ["*"]
+    }
+  },
+  "ts-node": {
+    "esm": true,
+    "compilerOptions": {
+      "module": "ESNext",
+      "moduleResolution": "Node"
     }
   },
   "include": ["src/**/*"],
