--- a/packages/puppeteer-sls/sls/package.json
+++ b/packages/puppeteer-sls/sls/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@microfox/crypto-sdk": "^1.0.3",
-    "@microfox/tool-core": "^1.0.1",
+    "@microfox/tool-core": "latest",
     "dotenv": "^16.4.5",
     "@microfox/puppeteer-sls": "^1.2.0"
   },
