--- a/packages/slack/sls/package.json
+++ b/packages/slack/sls/package.json
@@ -6,7 +6,6 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "build:watch": "tsc --watch",
     "deploy": "npm run build && serverless deploy --stage dev",
     "deploy:preview": "npm run build && serverless deploy --stage preview",
     "deploy:prod": "npm run build && serverless deploy --stage prod",
@@ -14,12 +13,13 @@
     "remove:preview": "serverless remove --stage preview",
     "remove:prod": "serverless remove --stage prod",
     "start": "serverless offline start",
-    "lint": "eslint  --ignore-path .gitignore ."
+    "lint": "eslint  --ignore-pattern 'dist/**'"
   },
   "dependencies": {
     "@microfox/crypto-sdk": "^1.0.3",
+    "@microfox/tool-core": "^1.0.1",
     "dotenv": "^16.4.5",
-    "@microfox/slack": "^1.0.4"
+    "@microfox/slack": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
@@ -30,7 +30,6 @@
     "eslint-plugin-import": "^2.31.0",
     "serverless": "^3.38.0",
     "serverless-api-gateway-throttling": "^2.0.3",
-    "serverless-offline": "^13.3.3",
     "serverless-plugin-typescript": "^2.1.5",
     "typescript": "^5.3.3"
   },
